Bug 75725 - [HSW regression] Upgrading from kernel 3.13.x to 3.14.x causes FPS drops during video playback in XBMC
Summary: [HSW regression] Upgrading from kernel 3.13.x to 3.14.x causes FPS drops duri...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: Ville Syrjala
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-03 19:44 UTC by bugzilla1
Modified: 2017-07-24 22:55 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (61.75 KB, text/plain)
2014-03-03 19:44 UTC, bugzilla1
no flags Details
dpkg -l |grep mesa (2.05 KB, text/plain)
2014-03-03 19:45 UTC, bugzilla1
no flags Details
Xorg.0.log (23.27 KB, text/plain)
2014-03-03 19:46 UTC, bugzilla1
no flags Details
dmesg (drm.debug=0xe) (184.09 KB, text/plain)
2014-03-03 19:52 UTC, bugzilla1
no flags Details
git bisect log (2.57 KB, text/plain)
2014-03-04 18:26 UTC, bugzilla1
no flags Details
[PATCH] drm/i915: Add a workaround for HSW scanline counter weirdness (2.97 KB, patch)
2014-03-06 19:20 UTC, Ville Syrjala
no flags Details | Splinter Review

Description bugzilla1 2014-03-03 19:44:42 UTC
Created attachment 95055 [details]
dmesg

XBMC is an OpenGL application which can use VAAPI to decode videos.

Since upgrading to a kernel of the 3.14.x-family (from 3.14-rc1), I experience significant FPS drops in video playback.

Reverting back to a kernel of the 3.13.x-family resolves that issue. Watching videos under 3.14.x is therefore at the moment impossible.

Turning VSync off or on doesn't solve the problem.

Required information:
Chipset: HSW
uname -m: x86_64
uname -r: 3.14.0-031400rc5-generic
Distribution: Ubuntu 13.10
Machine or mobo model: Fujitsu ESPRIMO Q920
Display connector: DisplayPort (conncted to the TV via a HDMI adapter)

Please find attached:
dmesg
Comment 1 bugzilla1 2014-03-03 19:45:21 UTC
Created attachment 95056 [details]
dpkg -l |grep mesa

dpkg -l |grep mesa
Comment 2 bugzilla1 2014-03-03 19:46:22 UTC
Created attachment 95057 [details]
Xorg.0.log

Xorg.0.log
Comment 3 bugzilla1 2014-03-03 19:47:04 UTC
(In reply to comment #0)
> Created attachment 95055 [details]
> dmesg
> 
> XBMC is an OpenGL application which can use VAAPI to decode videos.
> 
> Since upgrading to a kernel of the 3.14.x-family (from 3.14-rc1), I
> experience significant FPS drops in video playback.
> 
> Reverting back to a kernel of the 3.13.x-family resolves that issue.
> Watching videos under 3.14.x is therefore at the moment impossible.
> 
> Turning VSync off or on doesn't solve the problem.
> 
> Required information:
> Chipset: HSW
> uname -m: x86_64
> uname -r: 3.14.0-031400rc5-generic
> Distribution: Ubuntu 13.10
> Machine or mobo model: Fujitsu ESPRIMO Q920
> Display connector: DisplayPort (conncted to the TV via a HDMI adapter)
> 
> Please find attached:
> dmesg

Exact model is: Core i5-4570T
Comment 4 bugzilla1 2014-03-03 19:52:11 UTC
Created attachment 95058 [details]
dmesg (drm.debug=0xe)

dmesg output with drm.debug=0xe
Comment 5 Daniel Vetter 2014-03-03 20:31:04 UTC
This smells funny. I bisection to the offending commit would be awesome, see e.g.

https://wiki.ubuntu.com/Kernel/KernelBisection
Comment 6 bugzilla1 2014-03-04 18:07:00 UTC
(In reply to comment #5)
> This smells funny. I bisection to the offending commit would be awesome, see
> e.g.
> 
> https://wiki.ubuntu.com/Kernel/KernelBisection

Done. :-)

Bisecting: 0 revisions left to test after this (roughly 0 steps)
[8072bfa6045a264d3913102a35fab125b06603a2] drm/radeon: Move the early vblank IRQ fixup to radeon_get_crtc_scanoutpos()
Comment 7 bugzilla1 2014-03-04 18:25:41 UTC
Also commit 095163bad59bfeed294a81e0d873fa8943e4fa01 maybe causing it...
Comment 8 bugzilla1 2014-03-04 18:26:28 UTC
Created attachment 95108 [details]
git bisect log

git bisect log
Comment 9 Daniel Vetter 2014-03-04 18:28:50 UTC
Ville scored one!
Comment 10 Ville Syrjala 2014-03-05 21:30:09 UTC
I pushed something here:
git://gitorious.org/vsyrjala/linux.git atomic_plane_14

It's not the final patch since there are still some unanswered questions on how the hardware actually behaves. I can't be really sure it will fix the problem, but it should fix _a_ problem. In any case, please give it a try and report back if it helps, or if I'm barking up the wrong tree with this.
Comment 11 bugzilla1 2014-03-06 18:22:39 UTC
(In reply to comment #10)
> I pushed something here:
> git://gitorious.org/vsyrjala/linux.git atomic_plane_14
> 
> It's not the final patch since there are still some unanswered questions on
> how the hardware actually behaves. I can't be really sure it will fix the
> problem, but it should fix _a_ problem. In any case, please give it a try
> and report back if it helps, or if I'm barking up the wrong tree with this.

FPS drops are gone for me.
Comment 12 Ville Syrjala 2014-03-06 19:20:09 UTC
Created attachment 95234 [details] [review]
[PATCH] drm/i915: Add a workaround for HSW scanline counter weirdness

This patch should fix it for 3.14.

I also pushed this on top of the latest drm-intel-fixes tree to:
git://gitorious.org/vsyrjala/linux.git hsw_vblank
Comment 13 Jani Nikula 2014-03-11 13:19:30 UTC
(In reply to comment #12)
> Created attachment 95234 [details] [review] [review]
> [PATCH] drm/i915: Add a workaround for HSW scanline counter weirdness

Reporter, please try the final patch so we can add a Tested-by on it. Thanks.
Comment 14 bugzilla1 2014-03-11 16:44:02 UTC
Thank you very much. Works fine. :-)
Comment 15 Jani Nikula 2014-03-12 16:49:23 UTC
Fix pushed, thanks for the report.

commit fcb818231f81e22b2c3a76d7ef416237fa0c7609
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Tue Mar 11 12:58:45 2014 +0200

    drm/i915: Add a workaround for HSW scanline counter weirdness


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.